<resources>
    <string name="app_name">CocktailApp</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cocktailimage">cocktailImage</string>
    <string name="tequila">Tequila</string>
    <string name="tequila_blanco_cristalino">Tequila blanco cristalino</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="search">Search</string>
</resources>