<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailsFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/tequila"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <ImageView
                android:id="@+id/imageViewDetails"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@mipmap/ic_launcher"
                android:contentDescription="@string/tequila" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ingredients"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvIngredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tequila_blanco_cristalino"
                android:textAlignment="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/instructions"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"
                />


        </LinearLayout>

    </ScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>
