<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_marginStart="15dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="15dp"
    android:elevation="10dp"
    android:padding="5dp"
    app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageCocktail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="false"
                android:contentDescription="@string/cocktailimage"
                android:scaleType="centerCrop"
                android:src="@color/black" />

            <TextView
                android:id="@+id/tvCocktailName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tvIngredient"
                android:gravity="start"
                android:layout_marginStart="10dp"
                android:text="@string/tequila"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvIngredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:gravity="start"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:text="@string/tequila_blanco_cristalino"
                android:textColor="@color/white" />


        </RelativeLayout>


</androidx.cardview.widget.CardView>